// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render default button 1`] = `
<DocumentFragment>
  <button
    class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 bRqZMJ"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button should render primary button 1`] = `
<DocumentFragment>
  <button
    class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 bRqZMJ"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button should render secondary button 1`] = `
<DocumentFragment>
  <button
    class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 gtfjWr"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
</DocumentFragment>
`;

exports[`Button should render toggle button 1`] = `
<DocumentFragment>
  <button
    class="ant-btn ant-btn-link"
    type="button"
  >
    <span>
      Add
    </span>
  </button>
</DocumentFragment>
`;
